--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,14 +12,24 @@ services:
       - EMQX_DURABLE_STORAGE__MESSAGES__LAYOUT__SERIALIZATION_SCHEMA=asn1
       - EMQX_DASHBOARD__DEFAULT_USERNAME=admin
       - EMQX_DASHBOARD__DEFAULT_PASSWORD=admin
+      # Optimize for '+/pub/#' subscription:
       - EMQX_durable_storage__messages__layout__wildcard_thresholds=[0, infinity, 0, 10]
       - EMQX_durable_storage__messages__rocksdb__write_buffer_size=10MB
       - EMQX_durable_storage__messages__replication_options__wal_max_size_bytes=100000
-      - EMQX_durable_session__batch_size=10
+      - EMQX_durable_session__batch_size=100
+      # This option is needed for protecting against message queue build-up in the regular sessions. This doesn't happen to durable sessions:
       - EMQX_force_shutdown__enable=false
     volumes:
       - emqx:/opt/emqx/data
       - ./emqx-patches:/opt/emqx/data/patches
+
+  loadgen:
+    image: mcr.microsoft.com/devcontainers/typescript-node
+    depends_on: [emqx]
+    volumes:
+      - ./:/opt/
+    working_dir: /opt
+    entrypoint: [npm, start]
 
 volumes:
   emqx:
